@@ -1,4 +1,5 @@
 0.9.0 (currently working on)
+- [#3563] Feature: Automatically append the organizer's footer when sending an e-mail using the cancel/confirm forms
 - [#3609] Fix: Monkey functionality is broken in some search widget parts
 - [#3642] Fix: Test failure: test_Render_ForSentFromDate_PreselectsFromDateValues
 - [#3641] Change: Update all copyrights to 2010
